--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,18 @@ flib_*
 color_*
 todolist
 cma_tweann_test/*
+
 ./data/readData/data
 ./data/readData/*.csv
 ./data/readData/*.png
 ./data/readData/changememo.txt
 ./data/readData/bilateral_ref
 ./data/readData/bilateral_ref_setting_dur_byHand
+
 ./test*
 ./exec_results/*
+
+./src/special
+
+# Object files
+*.o
