--- a/src_forSB/Makefile
+++ b/src_forSB/Makefile
@@ -3,7 +3,7 @@ TARGET = estimate_main
 # CC = mpicc
 # CFLAGS = -O3 -Wall -g
 CC = mpifccpx
-CFLAGS = -Kfast
+CFLAGS = -Kfast -g
 LDFLAGS = -lm
 INCLUDES = -I.
 LIBS = -lm
